fix: adjust PayOS QR code container height and clipping on desktop

--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@
 #payos-checkout-container iframe {
   border: none !important;
   width: 100% !important;
-  height: calc(100% + 74px) !important;
-  margin-top: -74px !important;
+  height: calc(100% + 90px) !important;
+  margin-top: -90px !important;
   border-radius: inherit !important;
 }
 
